updated panama_jextract.md/.html files for API and command line flag changes.